Properly implemented pack class. Also fixed all the EVIL yellow underlines.