@@ -1,11 +1,5 @@
 package dev.cheech;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
-import net.md_5.bungee.api.ChatColor;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Material;
@@ -17,93 +11,75 @@ import org.bukkit.persistence.PersistentDataType;
 import java.io.*;
 import java.util.*;
 
-import static org.bukkit.Registry.MATERIAL;
-
 public class PackManager {
-    private static final Gson gson = new GsonBuilder().setPrettyPrinting().create();
     static File dataFolder;
-    private static List<Pack> packs = new ArrayList<Pack>();
+    private static final Map<String, Pack> packs = new HashMap<>();
 
-    public PackManager(File dF) {
+    private PackManager() {
+        throw new UnsupportedOperationException("Utility class");
+    }
+
+    public static void initialize(File dF) {
         dataFolder = dF;
-        if (!dataFolder.exists()) dataFolder.mkdirs();
+        if (!dataFolder.exists()) {boolean created = dataFolder.mkdirs();if (!created){return;}}
         File[] files = dataFolder.listFiles();
+        assert files != null;
         for (File curFile : files) {
-            try (FileReader reader = new FileReader(curFile)) {
-                packs.add(new Pack(curFile));
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
+            packs.put(curFile.getName().substring(0,curFile.getName().length()-5),new Pack(curFile));
         }
     }
 
     public static List<String> getPacks() {
-        List<String> ret = null;
-        for (Pack i : packs){
-            ret.add(i.getName());
-        }
+        List<String> ret = new ArrayList<>();
+        packs.forEach((_, value)-> ret.add(value.getName()));
         return ret;
     }
 
     public static ItemStack getDrop(String packName) {
-        File pack = new File(dataFolder, packName + ".json");
-        if (!pack.exists()) return null;
-        JsonObject jPack;
-        try (FileReader reader = new FileReader(pack)) {
-            jPack = gson.fromJson(reader, JsonObject.class);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        JsonElement drops = jPack.get("rarities");
-        JsonObject dropsObj = drops.getAsJsonObject();
-        Set<String> rarities = dropsObj.keySet();
-        String[] raritiesStrings = new String[rarities.size()];
-        JsonObject[] iDropsObjs = new JsonObject[rarities.size()];
+        Pack pack = packs.get(packName);
+        if (pack == null) return null;
+        List<String> rarities = pack.getRarities();
         double totalWeight = 0.0;
+        Pack.Rarity[] raritiesList = new Pack.Rarity[pack.getRarities().size()];
         int x = 0;
         for (String i : rarities) {
-            JsonElement idrops = dropsObj.get(i);
-            JsonObject idropsObj = idrops.getAsJsonObject();
-            totalWeight += idropsObj.get("weight").getAsDouble();
-            raritiesStrings[x] = i;
-            iDropsObjs[x] = idropsObj;
+            Pack.Rarity rarity = pack.getRarity(i);
+            totalWeight += rarity.weight();
+            raritiesList[x] = rarity;
             x++;
         }
         int idx = 0;
         String rarityName = null;
         for (double r = Math.random() * totalWeight; idx < rarities.size() - 1; ++idx) {
-            r -= iDropsObjs[idx].get("weight").getAsDouble();
-            rarityName = raritiesStrings[idx];
+            r -= raritiesList[idx].weight();
+            rarityName = raritiesList[idx].name();
             if (r <= 0.0) break;
         }
         //get rarity object
-        JsonObject finIDrops = iDropsObjs[idx];
+        Pack.Rarity finIDrops = raritiesList[idx];
         //get drop list
-        List<JsonElement> dropPool = finIDrops.get("drops").getAsJsonArray().asList();
+        List<String> dropPool = finIDrops.drops();
         //get color
-        String color = finIDrops.get("color").getAsString();
+        String color = finIDrops.color();
         //roll for item
         Random rand = new Random();
         String itemName = String.valueOf(dropPool.get(rand.nextInt(dropPool.size())));
-        //cut off quotes
-        itemName = itemName.substring(1);
-        itemName = itemName.substring(0,itemName.length()-1);
         //create item
         ItemStack ret = new ItemStack(Material.PAPER);
         ItemMeta meta = ret.getItemMeta();
         NamespacedKey key = new NamespacedKey(MineCards.getPluginObj(), "id");
-        meta.getPersistentDataContainer().set(key, PersistentDataType.STRING, packName+":"+itemName);
+        meta.getPersistentDataContainer().set(key, PersistentDataType.STRING, pack.getDisplayName()+":"+itemName);
         //make name and roll for shiny
-        Component message = null;
+        Component message;
         if (Math.random() < .05){
             message = MiniMessage.miniMessage().deserialize("<rainbow>SHINY!</rainbow> "+"<" + color + ">" + itemName);
             meta.setEnchantmentGlintOverride(true);
         } else {
             message = MiniMessage.miniMessage().deserialize("<" + color + ">" + itemName);
         }
-        Component lore = MiniMessage.miniMessage().deserialize("<"+color+">"+rarityName);
+        Component lore = MiniMessage.miniMessage().deserialize("A "+"<"+color+">"+rarityName +  " trading card");
         meta.itemName(message);
-        meta.lore(Arrays.asList(lore));
+        meta.lore(List.of(lore));
         ret.setItemMeta(meta);
         return ret;
     }
